Added jekyll-minifier but disabling js minify
Signed-off-by: George Araujo <george.gcac@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -260,6 +260,7 @@ plugins:
   - jekyll-imagemagick
   - jekyll-jupyter-notebook
   - jekyll-link-attributes
+  - jekyll-minifier
   - jekyll-paginate-v2
   - jekyll-regex-replace
   - jekyll/scholar
@@ -281,7 +282,15 @@ sass:
   style: compressed
 
 # -----------------------------------------------------------------------------
-# Terser settings
+# Jekyll Minifier
+# -----------------------------------------------------------------------------
+
+jekyll-minifier:
+  compress_javascript: false # set to false since we are using terser as the js minifier
+  # exclude: ["robots.txt", "assets/js/search/*.js"]
+
+# -----------------------------------------------------------------------------
+# Terser
 # -----------------------------------------------------------------------------
 
 terser:
